# intro-to-opengl

./: CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
learn-opengl/: CoordinateSystems.h  CoordinateSystems.txt  HelloTriangle.h  Shaders.h  Textures.h  Transformations.h  camera-fps.h  tcCamera.h  tcShader.h
lighting/: 12.Colors.h  tsVertexObject.h
shaders/: 6.1.coordinate-systems.vert  simpleTextureShader.frag  triangleShaderPassPosition.vert  triangleShaderUniformOffset.vert
